--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
     --cyan: #00ffff;
     --pink: #ff00ff;
-    --purple: #bd00ff;
+    --purple: #bc03ff;
     --green: #00ff00;
     --red: #ff3333;
     --yellow: #ffff00;
